--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,13 +95,19 @@
   },
   "i18n-ally.localesPaths": ["src/locales/lang"],
   "i18n-ally.keystyle": "nested",
+  "i18n-ally.annotations": true,
   "i18n-ally.sortKeys": true,
   "i18n-ally.namespace": true,
   "i18n-ally.pathMatcher": "{locale}/{namespaces}.{ext}",
-  "i18n-ally.enabledParsers": ["ts"],
+  "i18n-ally.enabledParsers": ["ts", "json"],
   "i18n-ally.sourceLanguage": "en",
   "i18n-ally.displayLanguage": "zh-CN",
   "i18n-ally.enabledFrameworks": ["vue", "react"],
+  "i18n-ally.extract.targetPickingStrategy": "most-similar",
+  "i18n-ally.annotationInPlace": false,
+  "i18n-ally.editor.preferEditor": false, //是否进入UI更改
+  "iconify.annotations": true,
+  "iconify.color": "auto",
   "cSpell.words": [
     "vben",
     "browserslist",
